<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- camrng -->
    <string name="generating_entropy">Generating Entropy...</string>
    <string name="time_elapsed">TIME ELAPSED</string>
    <string name="progress">PROGRESS</string>
    <string name="bytes_in_buffer">BYTES IN BUFFER</string>
    <string name="empty">empty</string>
    <string name="entropy_generated">ENTROPY GENERATED</string>
    <string name="entropy_needed">ENTROPY NEEDED</string>
    <string name="amount_of_pixels">AMOUNT OF PIXELS</string>
    <string name="cancel_button">Cancel</string>

</resources>
